--- a/config.json
+++ b/config.json
@@ -1,25 +1,25 @@
 {
-    "name": "imuncle",
-    "repo": "gitblog",
-    "client_id": "4148cca0f91e524d1a42",
+    "name": "songwxs",
+    "repo": "songwxs.github.io",
+    "client_id": "4f0aaa4656e5edb06947c7d46c54d84fd0d56b1b",
     "client_secret": "637c2c993cccf79c51a0a215f538932edfdcb9b0",
-    "title": "Gitblog",
-    "instruction": "基于GitHub issue的个人博客模板",
+    "title": "雪松の博客",
+    "instruction": "日常的一些生活技术上传",
     "server_link": "http://119.23.8.25/gh-oauth-server.php",
     "filter": {
         "creator": "all",
         "state": "open"
     },
     "menu": {
-        "首页":"./"
+        "菜单呀":"./"
     },
     "friends": {
-        "imuncle" : "https://imuncle.github.io"
+        "songwxs" : "https://msdn.itellyou.cn/"
     },
     "icons": {
         "Github" : {
             "icon_src" : "images/github.svg",
-            "href" : "https://github.com/imuncle/gitblog",
+            "href" : "https://github.com/songwxs/gitblog",
             "hidden_img" : null,
             "width" : 0
         }
